# hello-faas

./: .env.example  Cargo.toml  README.md  docker-compose.yml
demo-function/: Cargo.toml
demo-function/src/: main.rs
hello-faas/: Cargo.toml
hello-faas-cli/: Cargo.toml
hello-faas-deploy/: Cargo.toml
hello-faas-deploy/src/: main.rs
hello-faas-gateway/: Cargo.toml  hello-faas.toml
hello-faas-gateway/migrations/: 20230529120354_create-functions-table.sql
hello-faas-gateway/src/: config.rs  lib.rs  main.rs  prelude.rs
hello-faas-gateway/src/handlers/: deploy.rs  invoke.rs  mod.rs
hello-faas-gateway/src/repositories/: binary_repository.rs  container_repository.rs  function_repository.rs  mod.rs
hello-faas-gateway/src/traits/: mod.rs
hello-faas/src/: lib.rs
lambda-http-example/: Cargo.toml
lambda-http-example/src/: main.rs
migrate/: Cargo.toml
migrate/migrations/: 20230529192247_functions-table.sql
migrate/src/: main.rs
