[package]
name = "hello-faas-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
color-eyre = "0.6.2"
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4"] }
