[package]
name = "lambda-http-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
lambda_http = "0.8.0"
lambda_runtime = "0.8.0"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["ansi", "fmt"] }
